--- a/Home/cate_7_0_0/cate_7_0_0/css/cate_7_0_0.css
+++ b/Home/cate_7_0_0/cate_7_0_0/css/cate_7_0_0.css
@@ -1,2 +1,28 @@
-.container{margin:0 auto;max-width:1048px}.cate_7_0_0__box{margin:40px 0;display:table;width:100%;border-bottom:1px solid #e4e4e4;padding-bottom:40px}.cate_7_0_0__box a{text-decoration:none}.cate_7_0_0__box img{float:left;border:13px solid #dcedf7;margin:0 40px 5px 0}.cate_7_0_0__regist{background:#0084d0;padding:12px 40px;text-transform:uppercase;font-size:15px;color:#fff}@media (max-width: 480px){.cate_7_0_0__box img{width:93%;margin-bottom:30px}}
+.container {
+  margin: 0 auto;
+  max-width: 1048px; }
+
+.cate_7_0_0__box {
+  margin: 40px 0;
+  display: table;
+  width: 100%;
+  border-bottom: 1px solid #e4e4e4;
+  padding-bottom: 40px; }
+  .cate_7_0_0__box a {
+    text-decoration: none; }
+  .cate_7_0_0__box img {
+    float: left;
+    border: 13px solid #dcedf7;
+    margin: 0 40px 5px 0; }
+.cate_7_0_0__regist {
+  background: #0084d0;
+  padding: 12px 40px;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: #fff; }
+@media (max-width: 480px) {
+  .cate_7_0_0__box img {
+    width: 93%;
+    margin-bottom: 30px; } }
+
 /*# sourceMappingURL=cate_7_0_0.css.map */
