--- a/Home/doctor_3_1_0/scss/style.scss
+++ b/Home/doctor_3_1_0/scss/style.scss
@@ -117,21 +117,18 @@
             }
         }
     }
-    @media (max-width: 782px) {
-        &__title{
-            font-size: 15px;
+    @media (max-width: 989px) {
+        &__information{
+            .description{
+                .name{
+                    text-align: center;
+                }
+            }
         }
     }
     @media (max-width: 600px) {
-        &__title{
-            font-size: 14px;
-        }
         &__information{
-            img{
-                max-width: 50%;
-            }
             .description{
-                max-width: 35%;
                 h2{
                     font-size: 14px;
                 }
