--- a/Home/person_3_0_0/css/person_3_3_0.css
+++ b/Home/person_3_0_0/css/person_3_3_0.css
@@ -1,2 +1,67 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");*{padding:0;margin:0}body{font-family:'Roboto', sans-serif}img{width:100%}.container{max-width:1160px;padding:0 15px;margin:0 auto}.person_3_0_0{background-color:#eef6ff;padding-bottom:50px}.person_3_0_0__title{text-align:center;padding:35px 0}.person_3_0_0__rate{text-transform:uppercase;color:red;font-size:32px;font-weight:bold}.person_3_0_0__des{font-size:20px;margin-top:5px}.person_3_0_0__list{gap:8px;display:flex;flex-wrap:wrap;justify-content:space-evenly}.person_3_0_0__item{width:32%;margin-bottom:10px}.person_3_0_0__heading{display:flex;margin-top:10px;align-items:center;justify-content:center}.person_3_0_0__name{font-size:16px;margin:0px 0px 0px;margin-right:5px}.person_3_0_0__more{background-color:#0054fd;width:98px;height:19px;text-decoration:none;border-radius:2px;color:white;display:inline-block;padding:1px 5px}@media (max-width: 1023px){.person_3_0_0__item{width:46%;margin-bottom:15px}}@media (max-width: 425px){.person_3_0_0__item{width:100%;margin-bottom:15px}}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+* {
+  padding: 0;
+  margin: 0; }
+
+body {
+  font-family: 'Roboto', sans-serif; }
+
+img {
+  width: 100%; }
+
+.container {
+  max-width: 1160px;
+  padding: 0 15px;
+  margin: 0 auto; }
+
+.person_3_0_0 {
+  background-color: #eef6ff;
+  padding-bottom: 50px; }
+  .person_3_0_0__title {
+    text-align: center;
+    padding: 35px 0; }
+  .person_3_0_0__rate {
+    text-transform: uppercase;
+    color: red;
+    font-size: 32px;
+    font-weight: bold; }
+  .person_3_0_0__des {
+    font-size: 20px;
+    margin-top: 5px; }
+  .person_3_0_0__list {
+    gap: 8px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly; }
+  .person_3_0_0__item {
+    width: 32%;
+    margin-bottom: 10px; }
+  .person_3_0_0__heading {
+    display: flex;
+    margin-top: 10px;
+    align-items: center;
+    justify-content: center; }
+  .person_3_0_0__name {
+    font-size: 16px;
+    margin: 0px 0px 0px;
+    margin-right: 5px; }
+  .person_3_0_0__more {
+    background-color: #0054fd;
+    width: 98px;
+    height: 19px;
+    text-decoration: none;
+    border-radius: 2px;
+    color: white;
+    display: inline-block;
+    padding: 1px 5px; }
+
+@media (max-width: 1023px) {
+  .person_3_0_0__item {
+    width: 46%;
+    margin-bottom: 15px; } }
+@media (max-width: 425px) {
+  .person_3_0_0__item {
+    width: 100%;
+    margin-bottom: 15px; } }
+
 /*# sourceMappingURL=person_3_3_0.css.map */
