--- a/Home/regist_8_0_0/css/regist_8_0_0.css
+++ b/Home/regist_8_0_0/css/regist_8_0_0.css
@@ -1,2 +1,34 @@
-.regist_8_0_0{text-align:center}.regist_8_0_0 hr{width:15%}.regist_8_0_0__title{color:#0084d0;font-size:30px}.regist_8_0_0 form{padding:50px}.regist_8_0_0 form input[type="text"]{width:25%;padding:10px;margin-bottom:10px}.regist_8_0_0 .row{padding-bottom:15px}.regist_8_0_0 .row textarea{width:50%;height:150px;padding:0px 25px}.regist_8_0_0__regist button{background:#007ac1;padding:12px 25px;color:#fff;border:0px}.regist_8_0_0__regist button:hover{box-shadow:0px 8px 16px #b4b3b3}@media (max-width: 480px){.regist_8_0_0 form input[type="text"]{width:100%}.regist_8_0_0 .row textarea{width:100%;padding:0 20px 0 0}}
+.regist_8_0_0 {
+  text-align: center; }
+  .regist_8_0_0 hr {
+    width: 15%; }
+  .regist_8_0_0__title {
+    color: #0084d0;
+    font-size: 30px; }
+  .regist_8_0_0 form {
+    padding: 50px; }
+    .regist_8_0_0 form input[type="text"] {
+      width: 25%;
+      padding: 10px;
+      margin-bottom: 10px; }
+  .regist_8_0_0 .row {
+    padding-bottom: 15px; }
+    .regist_8_0_0 .row textarea {
+      width: 50%;
+      height: 150px;
+      padding: 0px 25px; }
+  .regist_8_0_0__regist button {
+    background: #007ac1;
+    padding: 12px 25px;
+    color: #fff;
+    border: 0px; }
+    .regist_8_0_0__regist button:hover {
+      box-shadow: 0px 8px 16px #b4b3b3; }
+  @media (max-width: 480px) {
+    .regist_8_0_0 form input[type="text"] {
+      width: 100%; }
+    .regist_8_0_0 .row textarea {
+      width: 100%;
+      padding: 0 20px 0 0; } }
+
 /*# sourceMappingURL=regist_8_0_0.css.map */
